# tser

./: Cargo.toml  index.html
.github/workflows/: ci.yml
assets/: index.c03ac5d0.css  index.cd6e4463.js  tser_wasm_bg.315bffeb.wasm
crates/: Cargo.toml
crates/tser/: Cargo.toml
crates/tser/src/: lib.rs  main.rs
crates/tser_block/: Cargo.toml
crates/tser_block/src/: lib.rs
crates/tser_codegen/: Cargo.toml
crates/tser_codegen/src/: lib.rs  rust.rs  swift.rs
crates/tser_ir/: Cargo.toml
crates/tser_ir/src/: lib.rs
crates/tser_ir/src/service/: mod.rs
crates/tser_ir/src/type_decl/: enum_.rs  mod.rs  struct_.rs  union.rs
crates/tser_ir/src/type_expr/: mod.rs  primitive.rs
crates/tser_parser_ts/: Cargo.toml
crates/tser_parser_ts/src/: error.rs  lib.rs  prop.rs  test_utils.rs  type_expr.rs
crates/tser_parser_ts/src/type_decl/: enm.rs  enum_.rs  mod.rs  st.rs  struct_.rs  union.rs
crates/tser_wasm/: .gitignore  Cargo.toml
crates/tser_wasm/src/: lib.rs
src/: constant.rs  error.rs  lib.rs  lit.rs  serde_lit.rs  swc_utils.rs
src/ast/: entity_path.rs  iter_hash.rs  lit.rs  mod.rs  module.rs
src/ast/ty/: interface.rs  lit.rs  mod.rs
website/: README.md  ci_build.sh  index.html  package-lock.json  package.json  vite.config.ts
website/src/: app.svelte  code-editor.svelte  editor.svelte  main.css  main.ts  sample.ts
