[package]
name = "tser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = "0.78"
swc_common = "0.14"
swc_ecma_ast = "0.58"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
serde_test = "1"
