[package]
name = "tser_wasm"
version = "0.1.0"
authors = ["patr0nus <dk4rest@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
tser = { path = "../tser" }
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"
